--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   font-family: "Poppins", sans-serif;
 }
 body{
-  background: #00D7FF;
+  background: #222831;
 }
 nav{
   position: sticky;
@@ -20,7 +20,7 @@ nav{
   left: 0;
   width: 90px;
   /* width: 280px; */
-  background: #00D7FF;
+  background: #222831;
   overflow: hidden;
   transition: 1s;
 }
@@ -97,12 +97,13 @@ a:hover span{
 .main-top{
   display: flex;
   width: 100%;
+  color: #fff;
 }
 .main-top i{
   position: absolute;
   right: 0;
   margin: 10px 30px;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   cursor: pointer;
 }
 .main .users{
@@ -112,10 +113,11 @@ a:hover span{
 .users .card{
   width: 25%;
   margin: 10px;
-  background: #5800FF;
+  background: #393E46;
   text-align: center;
   border-radius: 16px;
   padding: 10px;
+  color:#ddd ;
   box-shadow: 0 20px 35px rgba(0, 0, 0, 0.471);
 }
 .users .card img{
@@ -149,11 +151,13 @@ a:hover span{
   padding: 7px;
   cursor: pointer;
   border-radius: 10px;
-  background: transparent;
+  font-weight: bold;
+  color:#fff;
+  background: #393E46;
   /* border: 1px solid #4AD489; */
 }
 .users .card button:hover{
-  background: #72FFFF;
+  background: #e13c37;
   color: black;
   transition: 0.5s;
 }
@@ -181,7 +185,7 @@ a:hover span{
 }
 table thead tr{
   color: #fff;
-  background: #34AF6D;
+  background: #00ADB5;
   text-align: left;
   font-weight: bold;
 }
@@ -197,20 +201,20 @@ table thead tr{
 }
 .table tbody tr.active{
   font-weight: bold;
-  color: #4AD489;
+  color: #00ADB5;
 }
 .table tbody tr:last-of-type{
-  border-bottom: 2px solid #4AD489;
+  border-bottom: 2px solid #00ADB5;
 }
 .table button{
   padding: 6px 20px;
   border-radius: 10px;
   cursor: pointer;
   background: transparent;
-  border: 1px solid #4AD489;
+  border: 1px solid #00ADB5;
 }
 .table button:hover{
-  background: #4AD489;
+  background: #00ADB5;
   color: #fff;
   transition: 0.5rem;
 }
