--- a/public/style.css
+++ b/public/style.css
@@ -227,7 +227,7 @@ nav .fas{
     top: 14px;
 }
 .main-banner{
-  padding: 1rem;
+  padding-right: 5rem;
   text-align:right;
   width: 100%;
   /* color: transparent; */
